--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,1 +1,13 @@
-<p>products works!</p>
+<h1>Products</h1>
+
+<div class="cards">
+  <div *ngFor='let product of products' class="product-card" >
+    <img src="{{product.image}}">
+    <div class="card-content">
+      <h3>{{product.title}}</h3>
+      <p>{{product.price | currency}}</p>
+    </div>
+    <button>BUY</button>
+  </div>
+</div>
+
