--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 <nav>
-  <a href="#" class="logo">Shuz</a>
+  <a href="/" class="logo">Shuz</a>
   <ul class="nav-links">
-    <li><a href="#">Products</a></li>
+    <li><a routerLink='/products'>Products</a></li>
     <li><a href="#">About</a></li>
     <li><a href="#">Contact</a></li>
   </ul>
