--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,10 +1,10 @@
 <h1>Products</h1>
 
 <div class="cards">
-  <div *ngFor='let product of products' class="product-card" >
+  <div *ngFor='let product of products; index as productId' class="product-card" >
     <img src="{{product.image}}">
     <div class="card-content">
-      <h3>{{product.title}}</h3>
+      <h3><a [routerLink]="[productId]">{{product.title}}</a></h3>
       <p>{{product.price | currency}}</p>
     </div>
     <button>BUY</button>
