--- a/src/app/products/products.component.scss
+++ b/src/app/products/products.component.scss
@@ -8,6 +8,7 @@ h1 {
   color: darken(styles.$primary-color, 5%);
   background-color: styles.$secondary-color;
   width: 80%;
+  border-radius: 0px 0px 15px 15px;
 }
 .cards {
   width: 99%;
@@ -25,6 +26,7 @@ h1 {
     align-items: center;
     padding: 10px;
     justify-content: space-between;
+    border-radius: 15px;
     .card-content {
       margin: 10%;
       display: flex;
@@ -32,9 +34,10 @@ h1 {
       align-items: center;
       text-align: center;
     }
-    h3 {
+    a {
       color: styles.$primary-color;
       font-size: 1.75rem;
+      text-decoration: none;
     }
     p {
       margin-top: 15px;
@@ -62,9 +65,9 @@ h1 {
       border-radius: 5px;
       &:hover {
         background-color: darken(styles.$primary-color, 15%);
-        font-size: 18px;
-        padding: 14px 30px;
+        font-weight: bold;
         transition: 0.2s ease-in-out;
+        cursor: pointer;
       }
       &:focus {
         outline: none;
