added cart component and service/styled cart view/added product detail

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Lorem, ipsum dolor.</h1>
+  <h1>Lorem. Ipsum. Dolor.</h1>
   <div class="row">  
     <img src="https://images.unsplash.com/photo-1560769629-975ec94e6a86?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=80" alt="">
     <p>Lorem, ipsum dolor sit amet consectetur <span class="special-text">adipisicing</span> elit. Deleniti iusto officia odio. Pariatur, nesciunt fugiat.</p>
