--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -4,5 +4,6 @@
     <li><a routerLink='/products'>Products</a></li>
     <li><a href="#">About</a></li>
     <li><a href="#">Contact</a></li>
+    <li><a routerLink='/cart'>Cart <span id='cartAmount' *ngIf='itemNum'>{{itemNum}}</span></a></li>
   </ul>
 </nav>
