--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
 
 $primary-color: #9742e5;
-$secondary-color: #c8c8c8;
-$tertiary-color: #eee;
-$toolbar-color: #666;
+$secondary-color: #ebebeb;
+$tertiary-color: #333;
+$toolbar-color: #474747;
 
 * {
   font-family: 'Raleway', sans-serif;
