--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -4,11 +4,12 @@
   width: 80%;
   margin: 0 auto;
   h1 {
-    background-color: styles.$secondary-color;
+    // background-color: styles.$secondary-color;
     color: styles.$primary-color;
-    font-size: 4em;
+    font-size: 6em;
     text-align: center;
-    padding: 50px 0;
+    padding-top: .5em;
+    margin-bottom: 2em;
   }
   .special-text {
     color: styles.$primary-color;
@@ -18,6 +19,7 @@
     display: flex;
     align-items: center;
     p {
+      color: #ebebeb;
       font-size: 3em;
       padding: 0 .5em;
     }
