--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,4 +1,4 @@
-<h1 (click)='test()'>Product Details</h1>
+<h1>Product Details</h1>
 
 <div *ngIf='product' class="container">
   <img src="{{product.image}}" alt="">
