--- a/src/app/product-detail/product-detail.component.scss
+++ b/src/app/product-detail/product-detail.component.scss
@@ -6,13 +6,13 @@ h1 {
   padding: 30px 0;
   margin: 0 auto;
   color: darken(styles.$primary-color, 5%);
-  background-color: styles.$secondary-color;
   width: 80%;
   border-radius: 0px 0px 15px 15px;
 }
 
 .container {
   width: 80%;
+  color: #ebebeb;
   margin: 0 auto;
   padding: 60px 0;
   display: flex;
