--- a/src/app/products/products.component.scss
+++ b/src/app/products/products.component.scss
@@ -2,13 +2,12 @@
 
 h1 {
   text-align: center;
-  font-size: 5em;
-  padding: 30px 0;
+  font-size: 6em;
+  padding-top: .5em;
+  padding-bottom: 1em;
   margin: 0 auto;
   color: darken(styles.$primary-color, 5%);
-  background-color: styles.$secondary-color;
   width: 80%;
-  border-radius: 0px 0px 15px 15px;
 }
 .cards {
   width: 99%;
