finished basic version of site

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -18,6 +18,7 @@
         <td><p>{{totalPrice | currency}}</p></td>
       </tr>
     </table>
+  <button (click)='checkout()'>CHECKOUT</button>
   </div>
 </ng-template>
 <ng-template #none >
