--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -2,8 +2,7 @@
   <a href="/" class="logo">Shuz</a>
   <ul class="nav-links">
     <li><a routerLink='/products'>Products</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="/contact">Contact</a></li>
     <li><a routerLink='/cart'>Cart <span id='cartAmount' *ngIf='itemNum'>{{itemNum}}</span></a></li>
   </ul>
 </nav>
