--- a/src/app/toolbar/toolbar.component.scss
+++ b/src/app/toolbar/toolbar.component.scss
@@ -6,6 +6,8 @@ nav {
   display: flex;
   align-items: center;
   padding: 0 1em;
+  box-shadow: darken(styles.$toolbar-color, 5%) 2px 2px 3px;
+  z-index: 2;
   .logo {
     font-weight: bold;
     font-size: 2rem;
