--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
 
-$primary-color: #9742e5;
+// #9742e5;
+$primary-color: #ea1d6f;
 $secondary-color: #ebebeb;
-$tertiary-color: #333;
-$toolbar-color: #474747;
+$tertiary-color: #3e3e3e;
+$toolbar-color: #4d4d4f;
 
 * {
   font-family: 'Raleway', sans-serif;
