changed routing for contact and added sticky nav

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,7 +2,7 @@
 
 .container {
   width: 80%;
-  margin: 0 auto;
+  margin: 10vh auto;
   h1 {
     // background-color: styles.$secondary-color;
     color: styles.$primary-color;
