--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 $primary-color: #ea1d6f;
 $secondary-color: #ebebeb;
 $tertiary-color: #3e3e3e;
-$toolbar-color: #4d4d4f;
+$toolbar-color: rgba(238, 76, 141, 0.8);
 
 * {
   font-family: 'Raleway', sans-serif;
