--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,5 +1,5 @@
 <nav>
-  <a href="/" class="logo">Shuz</a>
+  <a routerLink="/" class="logo">Shuz</a>
   <ul class="nav-links">
     <li><a routerLink='/products'>Products</a></li>
     <li><a routerLink="/contact">Contact</a></li>
