--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 // #9742e5;
 $primary-color: #ea1d6f;
 $secondary-color: #ebebeb;
-$tertiary-color: #3e3e3e;
+$tertiary-color: #aaa;
 $toolbar-color: rgba(238, 76, 141, 0.8);
 
 * {
